# r2hermes

./: .gitignore  AGENTS.md  LICENSE.md  Makefile  README.md  hbc.sdb.txt  meson.build  meson_options.txt
.github/workflows/: ci.yml  meson.yml  r2plugin.yml  windows.yml
include/: common.h  hermes_encoder.h
include/decompilation/: decompiler.h  literals.h  token.h  translator.h
include/disassembly/: hbc_disassembler.h
include/hbc/: bytecode.h  common.h  data_provider.h  disasm.h  hbc.h  hermes_encoder.h  literals.h  opcodes.h  parser.h  version.h.in
include/hbc/decompilation/: decompiler.h  literals.h  optimizer.h  token.h  translator.h
include/hbc/disassembly/: hbc_disassembler.h
include/hbc/opcodes/: hermes_opcodes.h
include/hbc/parsers/: hbc_bytecode_parser.h
include/hermesdec/: hermesdec.h
include/opcodes/: hermes_opcodes.h
include/parsers/: hbc_bytecode_parser.h  hbc_file_parser.h
r2/: Makefile  arch_hermes.c  bin_hbc.c  bin_hermes.c
r2plugin/: README.md  config.mk  meson.build  r2plugins.h  static.cfg
r2plugin/arch/: deps.mk  meson.build  r2plugins.h
r2plugin/asm/: deps.mk  meson.build  r2plugins.h
r2plugin/core/: deps.h  deps.mk  meson.build
src/: decoder.c  encoder.c  hermes_encoder.c  main.c
src/decompilation/: decompiler.c  literals.c  token.c  translator.c
src/disassembly/: hbc_disassembler.c
src/lib/: data_provider_buffer.c  data_provider_file.c  data_provider_r2.c  hbc.c  hbc_internal.h  hbc_internal_legacy.h  hermesdec.c  literals_api.c  r2.c
src/lib/decompilation/: decompiler.c  literals.c  optimizer.c  token.c  translator.c
src/lib/opcodes/: decoder.c  encoder.c  isa.c  v51.inc.c  v58.inc.c  v59.inc.c  v61.inc.c  v62.inc.c  v68.inc.c  v69.inc.c  v70.inc.c  v72.inc.c  v73.inc.c  v76.inc.c  v80.inc.c  v81.inc.c  v82.inc.c  v83.inc.c  v84.inc.c  v85.inc.c  v86.inc.c  v87.inc.c  v89.inc.c  v90.inc.c  v92.inc.c  v93.inc.c  v94.inc.c  v95.inc.c  v96.inc.c  v97.inc.c  v99.inc.c
src/lib/parsers/: hbc_bytecode_parser.c  hbc_file_parser.c
src/lib/utils/: buffer_reader.c  string_buffer.c
src/opcodes/: hermes_opcodes.c  hermes_opcodes_92.c  hermes_opcodes_gen.c  v76.inc  v84.inc  v89.inc.c  v90.inc  v93.inc.c  v94.inc  v95.inc  v95.inc.c  v96.inc
src/parsers/: hbc_bytecode_parser.c  hbc_file_parser.c
src/r2/: Makefile  arch_hbc.c  asm_hbc.c  bin_hbc.c  core_hbc.c  core_hbc_one.c  data_provider_r2.c  esil.inc.c  radare_plugin.exports  radare_plugin.version  sbom.inc.c  utils.inc.c
src/tool/: hbctool.c  libhbctool.c  libhbctool.version  r2hermes.c
src/utils/: buffer_reader.c  string_buffer.c
test/: Makefile
test/asm/: test_comprehensive.asm  test_double.asm  test_half.asm  test_line.asm  test_small.asm
test/db/extras/: basic  decompiler  hbc-decompiler  hbc-disasm  hbc-headers  hbc-sourcelines
tests/: meson.build  test_debug_info.c
